Server and client side connecting to each other